# onlyargs

./: Cargo.toml  MSRV.md  README.md
.github/workflows/: ci.yml
examples/: basic.rs  full.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/derive/: Cargo.toml
examples/derive/src/: main.rs
examples/full/: Cargo.toml  README.md
examples/full-derive/: Cargo.toml  README.md
examples/full-derive/src/: main.rs
examples/full/src/: main.rs
onlyargs_derive/: Cargo.toml  README.md
onlyargs_derive/compile_tests/: compiler.rs  conflicting_positional.rs  conflicting_positional.stderr  conflicting_short_name.rs  conflicting_short_name.stderr  default_bool_false.rs  default_bool_true.rs  default_f32.rs  default_f64.rs  default_i128.rs  default_i8.rs  default_isize.rs  default_multivalue.rs  default_multivalue.stderr  default_negative_i128.rs  default_negative_i8.rs  default_negative_isize.rs  default_option.rs  default_option.stderr  default_osstring.rs  default_pathbuf.rs  default_positional.rs  default_positional.stderr  default_string.rs  default_u128.rs  default_u8.rs  default_usize.rs  empty.rs  ignore_short_name.rs  manual_short_name.rs  multivalue_f32.rs  multivalue_f64.rs  multivalue_i128.rs  multivalue_i8.rs  multivalue_isize.rs  multivalue_osstring.rs  multivalue_pathbuf.rs  multivalue_string.rs  multivalue_u128.rs  multivalue_usize.rs  (+26 more)
onlyargs_derive/src/: lib.rs  parser.rs
onlyargs_derive/tests/: parsing.rs
src/: extensions.rs  lib.rs  traits.rs
