[package]
name = "onlyargs"
description = "Obsessively tiny argument parsing"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
keywords = ["cli", "arg", "argument", "parse", "parser"]
categories = ["Command-line interface"]
license = "MIT"

[dependencies]
# No additional runtime dependencies!

[dev-dependencies]
error-iter = "0.4"
