[package]
name = "onlyargs"
description = "Obsessively tiny argument parsing"
version = "0.1.2"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/onlyargs"
edition = "2021"
keywords = ["cli", "arg", "argument", "parse", "parser"]
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
# No dependencies!

[dev-dependencies]
error-iter = "0.4"

[workspace]
members = [
    "examples/*",
    "onlyargs_derive",
]
