[package]
name = "onlyargs"
description = "Obsessively tiny argument parsing"
version = "0.2.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/onlyargs"
edition = "2021"
rust-version = "1.62.0"
keywords = ["cli", "arg", "argument", "parse", "parser"]
categories = ["command-line-interface"]
license = "MIT"
exclude = [
    "/.github",
    "/MSRV.md",
]

[dependencies]
# No dependencies!

[dev-dependencies]
error-iter = "0.4"

[workspace]
members = [
    "examples/*",
    "onlyargs_derive",
]
