[package]
name = "onlyargs_derive"
description = "Obsessively tiny argument parsing derive macro"
version = "0.1.2"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/onlyargs"
edition = "2021"
keywords = ["cli", "arg", "argument", "parse", "parser"]
categories = ["command-line-interface"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
myn = "0.1"
onlyargs = { version = "0.1", path = ".." }
