[package]
name = "onlyargs_derive"
description = "Obsessively tiny argument parsing derive macro"
version = "0.1.4"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/onlyargs"
edition = "2021"
rust-version = "1.62.0"
keywords = ["cli", "arg", "argument", "parse", "parser"]
categories = ["command-line-interface"]
license = "MIT"
exclude = [
    "/compile_tests",
]

[lib]
proc-macro = true

[[test]]
name = "compile_and_fail"
path = "compile_tests/compiler.rs"

[dependencies]
myn = "0.2.1"
onlyargs = { version = "0.1", path = ".." }

[dev-dependencies]
trybuild = "1"
