[package]
name = "derive-example"
description = "Example application for onlyargs_derive."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
error-iter = "0.4"
onlyargs = { path = "../.." }
onlyargs_derive = { path = "../../onlyargs_derive" }
onlyerror = { git = "https://github.com/parasyte/onlyerror.git", rev = "1d25d230767e91a29040b83dbf4faf689e69a818" }
